Fix handling of audio parameters in AudioInputDeviceManager.

Recent changes to use media::AudioParameters made sure input parameters
were always valid, but there was no check for the parameters of the
associated output device.

BUG=755248

Change-Id: Idfabf8ce1bf86756ea6cf08dc6bf895b798b3057
Reviewed-on: https://chromium-review.googlesource.com/615243
Reviewed-by: Olga Sharonova <olka@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494370}
Former-commit-id: 3c383683db9cce0d98953f0557d6b6948b3ab797