content/browser/renderer_host/media/audio_input_device_manager.cc
@@ -174,7 +174,10 @@ void AudioInputDeviceManager::OpenedOnIOThread(
                           ? input_params
                           : media::AudioParameters::UnavailableDeviceParams();
   info.device.matched_output_device_id = matched_output_device_id;
-  info.device.matched_output = matched_output_params;
+  info.device.matched_output =
+      matched_output_params.IsValid()
+          ? matched_output_params
+          : media::AudioParameters::UnavailableDeviceParams();
 
   devices_.push_back(info);
 
